--- a/src/gui/ThuocTinhDanhMuc_GUI.form
+++ b/src/gui/ThuocTinhDanhMuc_GUI.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="panelQuanLyThuocTinh" layout-manager="GridLayoutManager" row-count="5" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="10" left="5" bottom="10" right="5"/>
     <constraints>
-      <xy x="20" y="20" width="911" height="808"/>
+      <xy x="20" y="20" width="911" height="960"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -52,7 +52,7 @@
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false">
-            <minimum-size width="-1" height="200"/>
+            <minimum-size width="-1" height="150"/>
             <preferred-size width="1100" height="800"/>
           </grid>
         </constraints>
@@ -78,7 +78,7 @@
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="3" anchor="0" fill="3" indent="1" use-parent-layout="false">
-            <minimum-size width="-1" height="170"/>
+            <minimum-size width="-1" height="180"/>
             <preferred-size width="824" height="459"/>
           </grid>
         </constraints>
@@ -171,7 +171,7 @@
               </grid>
             </children>
           </grid>
-          <grid id="648a9" binding="panelGiaTriThuocTinh" layout-manager="GridLayoutManager" row-count="4" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="648a9" binding="panelGiaTriThuocTinh" layout-manager="GridLayoutManager" row-count="6" column-count="5" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
               <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false">
@@ -183,7 +183,9 @@
             <children>
               <scrollpane id="de86b">
                 <constraints>
-                  <grid row="0" column="0" row-span="1" col-span="4" vsize-policy="7" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                  <grid row="0" column="0" row-span="1" col-span="5" vsize-policy="7" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
+                    <minimum-size width="-1" height="50"/>
+                  </grid>
                 </constraints>
                 <properties>
                   <horizontalScrollBarPolicy value="30"/>
@@ -193,7 +195,9 @@
                 <children>
                   <component id="c0c49" class="javax.swing.JTable" binding="tableGiaTriThuocTinh">
                     <constraints/>
-                    <properties/>
+                    <properties>
+                      <showVerticalLines value="true"/>
+                    </properties>
                   </component>
                 </children>
               </scrollpane>
@@ -215,23 +219,23 @@
               </component>
               <component id="f075b" class="javax.swing.JButton" binding="btnThemGiaTri">
                 <constraints>
-                  <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+                  <grid row="5" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
                   <text value="Thêm"/>
                 </properties>
               </component>
-              <component id="d8131" class="javax.swing.JTextField" binding="textField1" default-binding="true">
+              <component id="d8131" class="javax.swing.JTextField" binding="txtMaGiaTri">
                 <constraints>
-                  <grid row="1" column="1" row-span="1" col-span="3" vsize-policy="0" hsize-policy="7" anchor="8" fill="3" indent="0" use-parent-layout="false">
+                  <grid row="1" column="1" row-span="1" col-span="4" vsize-policy="0" hsize-policy="7" anchor="8" fill="3" indent="0" use-parent-layout="false">
                     <preferred-size width="150" height="-1"/>
                   </grid>
                 </constraints>
                 <properties/>
               </component>
-              <component id="7847b" class="javax.swing.JTextField" binding="textField2" default-binding="true">
+              <component id="7847b" class="javax.swing.JTextField" binding="txtNDGiaTri">
                 <constraints>
-                  <grid row="2" column="1" row-span="1" col-span="3" vsize-policy="0" hsize-policy="7" anchor="8" fill="3" indent="0" use-parent-layout="false">
+                  <grid row="2" column="1" row-span="1" col-span="4" vsize-policy="0" hsize-policy="7" anchor="8" fill="3" indent="0" use-parent-layout="false">
                     <preferred-size width="150" height="-1"/>
                   </grid>
                 </constraints>
@@ -239,7 +243,7 @@
               </component>
               <component id="d2b02" class="javax.swing.JButton" binding="btnHuyGiaTri">
                 <constraints>
-                  <grid row="3" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+                  <grid row="5" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
                   <text value="Hủy"/>
@@ -247,12 +251,47 @@
               </component>
               <component id="528da" class="javax.swing.JButton" binding="btnSuaGiaTri">
                 <constraints>
-                  <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+                  <grid row="5" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
                   <text value="Sửa"/>
                 </properties>
               </component>
+              <component id="77d7f" class="javax.swing.JLabel" binding="labelSanPham">
+                <constraints>
+                  <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <text value="Sản phẩm"/>
+                </properties>
+              </component>
+              <component id="7b4d6" class="javax.swing.JTextField" binding="txtSanPham">
+                <constraints>
+                  <grid row="3" column="1" row-span="1" col-span="4" vsize-policy="0" hsize-policy="7" anchor="8" fill="3" indent="0" use-parent-layout="false">
+                    <preferred-size width="150" height="-1"/>
+                  </grid>
+                </constraints>
+                <properties/>
+              </component>
+              <component id="3366a" class="javax.swing.JLabel" binding="labelTrangThaiGiaTri">
+                <constraints>
+                  <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <text value="Trạng thái"/>
+                </properties>
+              </component>
+              <component id="1a459" class="javax.swing.JComboBox" binding="cmbTrangThaiGiaTri">
+                <constraints>
+                  <grid row="4" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties/>
+              </component>
+              <hspacer id="2e851">
+                <constraints>
+                  <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                </constraints>
+              </hspacer>
             </children>
           </grid>
           <grid id="13984" layout-manager="GridLayoutManager" row-count="1" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
